update storage class
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cp4d-watson-studio-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-cp4d-watson-studio-instance.yaml
@@ -34,4 +34,4 @@ spec:
       - name: spec.scaleConfig
         value: small
       - name: spec.storageCLass
-        value: managed-nfs-storage
+        value: ocs-storagecluster-cephfs
