deploy serverless operator
Signed-off-by: Carlos Santana <csantana23@gmail.com>

--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -71,6 +71,9 @@ resources:
 #- argocd/operators/openshift-service-mesh.yaml
 #- argocd/instances/openshift-service-mesh-instance.yaml
 
+# Serverless
+- argocd/operators/openshift-serverless.yaml
+
 # Monitoring
 #- argocd/instances/instana-agent.yaml
 
