--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
 #- argocd/namespace-prod.yaml
 #- argocd/namespace-cloudpak.yaml
 #- argocd/namespace-istio-system.yaml
+- argocd/namespace-knative-serving.yaml
 #- argocd/namespace-openldap.yaml
 #- argocd/namespace-sealed-secrets.yaml
 #- argocd/namespace-tools.yaml
